# drum-practice-tracker

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  rabbit_mq_worker.py
drum_practice_tracker/: asgi.py  settings.py  urls.py  wsgi.py
training/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
training/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
